🛠️ refactor: 코드 리펙토링
🔗 Resolves: #156