@@ -15,7 +15,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -75,6 +74,6 @@ public class CategoryServiceImpl implements CategoryService {
                             productCount
                     );
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
